Change home image size when mobile + set admin

--- a/src/PP/PropositionBundle/Resources/views/proposition/propositionPopup.html.twig
+++ b/src/PP/PropositionBundle/Resources/views/proposition/propositionPopup.html.twig
@@ -12,7 +12,7 @@
             <div class="content-slideshow">
                     <div id="propActionTop" class="action-top">
                             <div class="action-group left">
-                    <a target="_self" href="{{ path('pp_request_homepage') }}" title="Prestapic" class="galery-logo"></a>
+                                <a target="_self" href="{% endverbatim %}{{ url('pp_request_homepage') }}{% verbatim %}" title="Prestapic" class="galery-logo"></a>
                             </div>                   
 
                             <div class="action-group center">
