--- a/src/PP/RequestBundle/Resources/views/Request/view.html.twig
+++ b/src/PP/RequestBundle/Resources/views/Request/view.html.twig
@@ -204,7 +204,7 @@
                 <li ng-cloak ng-if="commentThread.commentNb < 1" class="comment">                
                      <div class="comment-container">                     
                          <div class="comment-content">
-                            Be the firts to comment !
+                            Be the first to comment !
                          </div>
                      </div>
                 </li>
